--- a/OnionApiTemplate.Domain/OnionApiTemplate.Domain.csproj
+++ b/OnionApiTemplate.Domain/OnionApiTemplate.Domain.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="ValueObjects\" />
     <Folder Include="Specifications\" />
   </ItemGroup>
 
